Fix: Windows-only manual, remove loopMIDI/Releases references, reorder Reaper before compositional examples